--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 { 
+  "homepage": "https://github.com/diegomdomi/webStore.git",
   "name": "e-store-web",
   "version": "0.1.0",
   "private": true,
@@ -23,7 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
