--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/diegomdomi/webStore.git",
+  "homepage": ".",
   "name": "e-store-web",
   "version": "0.1.0",
   "private": true,
